5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1582_996.log
== TEST (2019-03-16 20:48:11) 
-- CODE:
print("*****")
print("(* 째 째 * ) ")
print(" ")
print(" ")
print(" ")
-- OUTPUT:
*****
(* 째 째 * )
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 20:49:53) 
-- CODE:
a=*****
print("a")
b=(* o o *)
print("b")
print(" ")
print(" ")
print(" ")
-- ERROR:
File "XXXX", line 1
    a=*****
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 20:50:40) 
-- CODE:
a=*****
print("a")
b=(* o o *)
print("b")
print(" ")
print(" ")
print(" ")
-- ERROR:
File "XXXX", line 1
    a=*****
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 20:51:52) 
-- CODE:
a=''*****''
print("a")
b=(* o o *)
print("b")
print(" ")
print(" ")
print(" ")
-- ERROR:
File "XXXX", line 1
    a=''*****''
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 20:52:05) 
-- CODE:
varia1=''*****''
print("a")
b=(* o o *)
print("b")
print(" ")
print(" ")
print(" ")
-- ERROR:
File "XXXX", line 1
    varia1=''*****''
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 20:52:12) 
-- CODE:
varia1=''*****''
print("avaria1")
b=(* o o *)
print("b")
print(" ")
print(" ")
print(" ")
-- ERROR:
File "XXXX", line 1
    varia1=''*****''
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 20:52:46) 
-- CODE:
*=a
print("***")
b=(* o o *)
print("b")
print(" ")
print(" ")
print(" ")
-- ERROR:
File "XXXX", line 1
    *=a
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 20:53:07) 
-- CODE:
a=*****
print("a")
b=(* o o *)
print("b")
print(" ")
print(" ")
print(" ")
-- ERROR:
File "XXXX", line 1
    a=*****
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 20:54:53) 
-- CODE:
a="*****"
print("a")
b="(* o o *)"
print("b")
c="* ^ *"
print("c")
d="* --- *"
print("d")
print("a")
-- OUTPUT:
a
b
c
d
a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 20:55:23) 
-- CODE:
a="*****"
print("a")

-- OUTPUT:
a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 20:56:13) 
-- CODE:
a="1"
print("a")

-- OUTPUT:
a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 20:56:21) 
-- CODE:
a="1"
print("a")

-- OUTPUT:
a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 20:56:23) 
-- CODE:
a="1"
print("a")

-- OUTPUT:
a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 20:56:54) 
-- CODE:
a="1"
print(a)

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 20:57:09) 
-- CODE:
a=(*****)
print(a)

-- ERROR:
File "XXXX", line 1
    a=(*****)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 20:58:16) 
-- CODE:
a="*"
print(a+a+a+a+a)

-- OUTPUT:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 20:58:17) 
-- CODE:
a="*"
print(a+a+a+a+a)

-- OUTPUT:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 20:58:17) 
-- CODE:
a="*"
print(a+a+a+a+a)

-- EXECUTION TIME:
0.129051
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 20:59:56) 
-- CODE:
a="*"
b="("
c="o"
d=")"
e="^"
f="-"

-- OUTPUT:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:01:17) 
-- CODE:
a="*"
b="("
c="o"
d=")"
e="^"
f="-"
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(a+e+a)
print(a+a+a+a+a)

-- OUTPUT:
*****
(*oo*)
*^*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:02:06) 
-- CODE:
a="*"
b="("
c=" o "
d=")"
e=" ^ "
f=" - "
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(a+e+a)
print(a+a+a+a+a)

-- OUTPUT:
*****
(* o  o *)
* ^ *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:02:16) 
-- CODE:
a="*"
b="("
c=" o "
d=")"
e=" ^ "
f=" - "
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(a+e+a)
print(a+a+a+a+a)

-- EXECUTION TIME:
0.180752
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o  o *)
* ^ *
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:02:23) 
-- CODE:
a="*"
b="("
c=" o "
d=")"
e=" ^ "
f=" - "
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(a+e+a)
print(a+a+a+a+a)

-- OUTPUT:
*****
(* o  o *)
* ^ *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:03:03) 
-- CODE:
a="*"
b="("
c=" o "
d=")"
e=" ^ "
f=" - "
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print( a+e+a )
print(a+a+a+a+a)

-- OUTPUT:
*****
(* o  o *)
* ^ *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:04:44) 
-- CODE:
a="*"
b="("
c=" o "
d=")"
e=" ^ "
f=" - "
   print(a+a+a+a+a)
print(b+a+c+c+a+d)
   print(a+e+a)
   print(a+a+a+a+a)

-- ERROR:
File "XXXX", line 7
    print(a+a+a+a+a)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:05:03) 
-- CODE:
a="*"
b="("
c=" o "
d=")"
e=" ^ "
f=" - "
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(a+e+a)
print(a+a+a+a+a)

-- OUTPUT:
*****
(* o  o *)
* ^ *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:05:35) 
-- CODE:
a="*"
b="("
c=" o "
d=")"
e=" ^ "
f=" - "
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(a+e+a)
print(a+f+f+f+a)
print(a+a+a+a+a)

-- OUTPUT:
*****
(* o  o *)
* ^ *
* -  -  - *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:05:38) 
-- CODE:
a="*"
b="("
c=" o "
d=")"
e=" ^ "
f=" - "
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(a+e+a)
print(a+f+f+f+a)
print(a+a+a+a+a)

-- EXECUTION TIME:
0.141015
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o  o *)
* ^ *
* -  -  - *
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:05:45) 
-- CODE:
a="*"
b="("
c=" o "
d=")"
e=" ^ "
f=" - "
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(a+e+a)
print(a+f+f+f+a)
print(a+a+a+a+a)

-- OUTPUT:
*****
(* o  o *)
* ^ *
* -  -  - *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:05:50) 
-- CODE:
a="*"
b="("
c=" o "
d=")"
e=" ^ "
f="-"
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(a+e+a)
print(a+f+f+f+a)
print(a+a+a+a+a)

-- OUTPUT:
*****
(* o  o *)
* ^ *
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:06:06) 
-- CODE:
a="*"
b="("
c=" o "
d=")"
e=" ^ "
f="-"
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(a+e+a)
print(a+f+f+f+a)
print(a+a+a+a+a)

-- EXECUTION TIME:
0.143245
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o  o *)
* ^ *
*---*
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:06:10) 
-- CODE:
a="*"
b="("
c=" o "
d=")"
e=" ^ "
f="-"
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(a+e+a)
print(a+f+f+f+a)
print(a+a+a+a+a)

-- OUTPUT:
*****
(* o  o *)
* ^ *
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:06:35) 
-- CODE:
a="*"
b="("
c=" o "
d=")"
e=" ^ "
f="-"
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(a+e+a)
print(a+f+f+f+a)
print(a+a+a+a+a)

-- OUTPUT:
*****
(* o  o *)
* ^ *
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:07:06) 
-- CODE:
a="  *"
b="("
c=" o "
d=")"
e=" ^ "
f="-"
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(a+e+a)
print(a+f+f+f+a)
print(a+a+a+a+a)

-- OUTPUT:
*  *  *  *  *
(  * o  o   *)
  * ^   *
  *---  *
  *  *  *  *  *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:07:15) 
-- CODE:
a="*"
b="("
c=" o "
d=")"
e=" ^ "
f="-"
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(a+e+a)
print(a+f+f+f+a)
print(a+a+a+a+a)

-- OUTPUT:
*****
(* o  o *)
* ^ *
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:07:29) 
-- CODE:
a= "*"
b="("
c=" o "
d=")"
e=" ^ "
f="-"
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(a+e+a)
print(a+f+f+f+a)
print(a+a+a+a+a)

-- OUTPUT:
*****
(* o  o *)
* ^ *
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:08:47) 
-- CODE:
a= "*"
b="("
c=" o "
d=")"
e="* ^ *"
f="-"
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(a+e+a)
print(a+f+f+f+a)
print(a+a+a+a+a)

-- OUTPUT:
*****
(* o  o *)
** ^ **
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:09:10) 
-- CODE:
a= "*"
b="("
c=" o "
d=")"
e="* ^ *"
f="-"
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(e)
print(a+f+f+f+a)
print(a+a+a+a+a)

-- OUTPUT:
*****
(* o  o *)
* ^ *
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:09:36) 
-- CODE:
a= "*"
b="("
c=" o "
d=")"
e="* ^ *"
f="-"
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(e)
print(a+f+f+f+a)
print(a+a+a+a+a)

-- EXECUTION TIME:
0.178602
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o  o *)
* ^ *
*---*
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:09:41) 
-- CODE:
a= "*"
b="("
c=" o "
d=")"
e="* ^ *"
f="-"
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(e)
print(a+f+f+f+a)
print(a+a+a+a+a)

-- OUTPUT:
*****
(* o  o *)
* ^ *
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:10:00) 
-- CODE:
a= "*"
b="("
c="o"
d=")"
e="* ^ *"
f="-"
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(e)
print(a+f+f+f+a)
print(a+a+a+a+a)

-- OUTPUT:
*****
(*oo*)
* ^ *
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:10:04) 
-- CODE:
a= "*"
b="("
c="o"
d=")"
e="* ^ *"
f="-"
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(e)
print(a+f+f+f+a)
print(a+a+a+a+a)

-- EXECUTION TIME:
0.139162
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(*oo*)
* ^ *
*---*
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:10:10) 
-- CODE:
a= "*"
b="("
c="o"
d=")"
e="* ^ *"
f="-"
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(e)
print(a+f+f+f+a)
print(a+a+a+a+a)

-- OUTPUT:
*****
(*oo*)
* ^ *
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:10:32) 
-- CODE:
a= "*"
b="("
c=" o "
d=")"
e="* ^ *"
f="-"
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(e)
print(a+f+f+f+a)
print(a+a+a+a+a)

-- OUTPUT:
*****
(* o  o *)
* ^ *
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:10:45) 
-- CODE:
a= "*"
b="("
c="o"
d=")"
e="* ^ *"
f="-"
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(e)
print(a+f+f+f+a)
print(a+a+a+a+a)

-- OUTPUT:
*****
(*oo*)
* ^ *
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:11:29) 
-- CODE:
a= " *"
b="("
c="o"
d=")"
e="* ^ *"
f="-"
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(e)
print(a+f+f+f+a)
print(a+a+a+a+a)

-- OUTPUT:
* * * * *
( *oo *)
* ^ *
 *--- *
 * * * * *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:11:43) 
-- CODE:
a= " **"
b="("
c="o"
d=")"
e="* ^ *"
f="-"
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(e)
print(a+f+f+f+a)
print(a+a+a+a+a)

-- OUTPUT:
** ** ** ** **
( **oo **)
* ^ *
 **--- **
 ** ** ** ** **
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:11:59) 
-- CODE:
a= "*****"
b="("
c="o"
d=")"
e="* ^ *"
f="-"
print(a+a+a+a+a)
print(b+a+c+c+a+d)
print(e)
print(a+f+f+f+a)
print(a+a+a+a+a)

-- OUTPUT:
*************************
(*****oo*****)
* ^ *
*****---*****
*************************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:12:07) 
-- CODE:
a= "*****"
b="("
c="o"
d=")"
e="* ^ *"
f="-"
print(a)
print(b+a+c+c+a+d)
print(e)
print(a+f+f+f+a)
print(a+a+a+a+a)

-- OUTPUT:
*****
(*****oo*****)
* ^ *
*****---*****
*************************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:14:48) 
-- CODE:
a= "*"
b="("
c=" o "
d=")"
e="* ^ *"
f="* --- *"
print(a+a+a+a+a)
print(b+c+c+a+d)
print(e)
print(a+f+f+f+a)
print(a+a+a+a+a)

-- OUTPUT:
*****
( o  o *)
* ^ *
** --- ** --- ** --- **
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:15:19) 
-- CODE:
a= "*"
b="("
c=" o "
d=")"
e="* ^ *"
f="* --- *"
print(a+a+a+a+a)
print(b+c+c+a+d)
print(e)
print(f)
print(a+a+a+a+a)

-- OUTPUT:
*****
( o  o *)
* ^ *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:16:05) 
-- CODE:
a= "*"
x=" "
b="("
c=" o "
d=")"
e="* ^ *"
f="* --- *"
print(a+a+a+a+a)
print(b+c+c+a+d)
print(e)
print(f)
print(x+a+a+a+a+a)

-- OUTPUT:
*****
( o  o *)
* ^ *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:16:33) 
-- CODE:
a= "*"
x=" "
b="("
c=" o "
d=")"
e="* ^ *"
f="* --- *"
print(x+a+a+a+a+a)
print(b++ac+c+a+d)
print(e)
print(f)
print(x+a+a+a+a+a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(b++ac+c+a+d)
NameError: name 'ac' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:16:44) 
-- CODE:
a= "*"
x=" "
b="("
c=" o "
d=")"
e="* ^ *"
f="* --- *"
print(x+a+a+a+a+a)
print(b+a+c+c+a+d)
print(e)
print(f)
print(x+a+a+a+a+a)

-- OUTPUT:
*****
(* o  o *)
* ^ *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:16:58) 
-- CODE:
a= "*"
x=" "
b="("
c=" o "
d=")"
e="* ^ *"
f="* --- *"
print(x+x+a+a+a+a+a)
print(b+a+c+c+a+d)
print(e)
print(f)
print(x+a+a+a+a+a)

-- OUTPUT:
*****
(* o  o *)
* ^ *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:17:26) 
-- CODE:
a= "*"
x=" "
b="("
c=" o "
d=")"
e="* ^ *"
f="* --- *"
print(x+x+a+a+a+a+a)
print(b+a+c+c+a+d)
print(x+x+e)
print(f)
print(x+a+a+a+a+a)

-- OUTPUT:
*****
(* o  o *)
  * ^ *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:18:03) 
-- CODE:
a= "*"
x=" "
b="("
c=" o "
d=")"
e="* ^ *"
f="* --- *"
print(x+x+a+a+a+a+a)
print(b+a+c+c+a+d)
print(x+x+e)
print(x+f)
print(x+a+a+a+a+a)

-- OUTPUT:
*****
(* o  o *)
  * ^ *
 * --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:18:16) 
-- CODE:
a= "*"
x=" "
b="("
c=" o "
d=")"
e="* ^ *"
f="* --- *"
print(x+x+a+a+a+a+a)
print(b+a+c+c+a+d)
print(x+x+e)
print(x+f)
print(x+a+a+a+a+a)

-- EXECUTION TIME:
0.18837
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o  o *)
  * ^ *
 * --- *
 *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:32:33) 
-- CODE:
a= "*"
x=" "
b="("
c=" o "
d=")"
e="* ^ *"
f="* --- *"
print(x+x+a+a+a+a+a)
print(b+a+c+c+a+d)
print(x+x+e)
print(x+f)
print(x+a+a+a+a+a)

-- EXECUTION TIME:
0.266343
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o  o *)
  * ^ *
 * --- *
 *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
